--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -8,9 +8,10 @@
 
   <!-- Show progress of the run -->
   <arg value="p"/>
+  <arg value="s"/>
 
   <arg name="extensions" value="php,module,inc,install,test,profile,theme,css,info,txt,yml"/>
-  <config name="drupal_core_version" value="9"/>
+  <config name="drupal_core_version" value="10"/>
 
 
   <rule ref="Drupal">
